styles.css
#gamesboard-container {
    width: 500px;
    display: flex;
    justify-content: space-between;
}

.game-board {
    width: 200px;
    height: 200px;
}

.block {
    width: 20px;
    height: 20px;
}

.option-container {
    width: 500px;
    height: 60px;
    margin: 30px 0;
    background-color: yellow;
    display: flex;
    align-items: center;
}

.destroyer {
    background-color: brown;
}

.submarine {
    background-color: green;
}

.cruiser {
    background-color: purple;
}

.battleship {
    background-color: orange;
}

.carrier {
    background-color: blue;
}

.destroyer-preview {
    width: 20px;
    height: 10px;
    margin: 3px;
}

.submarine-preview {
    width: 30px;
    height: 10px;
    margin: 3px;
}

.cruiser-preview {
    width: 30px;
    height: 10px;
    margin: 3px;
}

.battleship-preview {
    width: 40px;
    height: 10px;
    margin: 3px;
}

.carrier-preview {
    width: 50px;
    height: 10px;
    margin: 3px;
}

